Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-3241

Deadlock in qmf agent triggered by producer flow control

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.10
    • 0.11
    • QMF
    • None

    Description

      The remote agent (cpp/src/qpid/agent) occasionally holds a mutex while calling message_transfer. If the message send is blocked waiting for a completion, the agent can deadlock because a received message callback that causes the lock to be acquired will never return and the callback thread is needed to process completions.

      Attachments

        Activity

          People

            tross Ted Ross
            tross Ted Ross
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: