QPID-3241 - Deadlock in qmf agent triggered by producer flow control

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1099225 13f79535-47bb-0310-9956-ffa450edef68